--- a/themes/hugo-theme-console/layouts/index.html
+++ b/themes/hugo-theme-console/layouts/index.html
@@ -7,7 +7,7 @@
 <p>
 Thanks for checking out my website. My name is <b>Krishna Sangeeth</b>, I am currently working as a Data Scientist in the Global AI Accelerator 
 group of Ericsson. Prior to Ericsson I have worked on solving  large scale hierarchial classification  at Indix and Data Fusion 
-for Nielsen. I have also had a run in with many diverse engineering problems at TCS dealing working on things ranging from legacy systems such as Mainframes, Fortran to Bigdata
+for Nielsen. I have also had a run in with many diverse engineering problems at TCS  working on things ranging from legacy systems such as Mainframes, Fortran to Bigdata
 systems like Spark, Hadoop etc. Over my career, my philosophy towards work has been to be passionate and eager about learning something and keep
 getting better at my skills, hence my handle across the web <b>whiletruelearn</b>.
 
