Update landing page

--- a/themes/hugo-theme-console/layouts/index.html
+++ b/themes/hugo-theme-console/layouts/index.html
@@ -5,8 +5,10 @@
 
 
 <p>
-Thanks for checking out my website. My name is <b>Krishna Sangeeth</b>, I am currently working as a Data Scientist in the Global AI Accelerator 
-group of Ericsson. Prior to Ericsson I have worked on solving  large scale hierarchial classification  at Indix and Data Fusion 
+Thanks for checking out my website. My name is <b>Krishna Sangeeth</b>, I am a <b>Machine Learning engineer</b> who is living in India. 
+  
+I am currently working as a Machine Learning Lead at Avalara focussing on MLOps and Document AI in a fintech domain. Previously I worked in the Global AI Accelerator 
+group of Ericsson as a Senior Data scientist working on Timeseries Analysis, Anomaly detection etc in Telecom domain. Prior to Ericsson I have worked on solving  large scale hierarchial classification  at Indix and Data Fusion 
 for Nielsen. I have also had a run in with many diverse engineering problems at TCS  working on things ranging from legacy systems such as Mainframes, Fortran to Bigdata
 systems like Spark, Hadoop etc. Over my career, my philosophy towards work has been to be passionate and eager about learning something everyday and keep
 getting better at my skills, hence my handle across the web <b>whiletruelearn</b>.
@@ -25,7 +27,7 @@ The best way to connect with me is via <a href="https://twitter.com/whiletruelea
 On a personal front I am married and I enjoy traveling, reading, watching movies, listening to podcasts, etc 
 </p>
 
-Last Updated : Nov 2020
+Last Updated : June 2023
 
 
 <br/>
