--- a/themes/hugo-theme-console/layouts/index.html
+++ b/themes/hugo-theme-console/layouts/index.html
@@ -1,5 +1,13 @@
 {{ define "main" }}
 
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "i5o6hkvds9");
+</script>
+
 <h1>Hello World!</h1>
 
 
