--- a/themes/hugo-theme-console/layouts/index.html
+++ b/themes/hugo-theme-console/layouts/index.html
@@ -7,29 +7,28 @@
 
 
 <p>
-Thanks for checking out my website. My name is <b>Krishna Sangeeth</b>, I am a <b>Machine Learning engineer</b> who is living in India. 
+Thanks for checking out my website. My name is <b>Krishna Sangeeth</b>, I am a <b>Machine Learning engineer</b>  from Kerala, India. 
+
+I have been working as a freelance engineer/consultant for the past year or so. Below is my career highlights so far. 
+
+- Machine Learning Lead @ Avalara
+- Senior Data Scientist @ Ericsson
+- ML Engineer @ Indix
+- Software Engineer @ TCS 
+
+I hold a Master's degree in Datascience and Engineering from BITS Pilani and a Bachelors Degree in Computer Science Engineering from 
+College of Engineering Chengannur.
+
   
-I am currently working as a Machine Learning Lead at Avalara focussing on MLOps and Document AI in a fintech domain. Previously I worked in the Global AI Accelerator 
-group of Ericsson as a Senior Data scientist working on Timeseries Analysis, Anomaly detection etc in Telecom domain. Prior to Ericsson I have worked on solving  large scale hierarchial classification  at Indix and Data Fusion 
-for Nielsen. I have also had a run in with many diverse engineering problems at TCS  working on things ranging from legacy systems such as Mainframes, Fortran to Bigdata
-systems like Spark, Hadoop etc. Over my career, my philosophy towards work has been to be passionate and eager about learning something everyday and keep
-getting better at my skills, hence my handle across the web <b>whiletruelearn</b>.
 
-</p>
-<p>    
-I care deeply about building software, specifically about building software systems where there is  intersection of <b>Distributed systems</b> and <b>Artificial Intelligence</b>.
-Not really a fan boy of any particular technology stack , but i do tend to use Python for getting most of the things done.
+<a href="https://whiletruelearn.github.io/projects/"> Projects</a>
 </p>
 <p>
-I am an <b>open-source</b> enthusiast with successful code contributions made to projects such as scikit-learn, mlflow etc. I am not very active lately, but  
-you can see some of my opensource work <a href="https://github.com/whiletruelearn"> here</a>
-</p>
-<p>
-The best way to connect with me is via <a href="https://twitter.com/whiletruelearn"> twitter</a> , i typically post my rants about life, universe and everything else there.
-On a personal front I am married and I enjoy traveling, reading, watching movies, listening to podcasts, etc 
+<a href="https://twitter.com/whiletruelearn"> Twitter</a> 
 </p>
 
-Last Updated : June 2023
+
+Last Updated : Nov 2024
 
 
 <br/>
