Update hugo version

--- a/themes/hugo-theme-console/layouts/index.html
+++ b/themes/hugo-theme-console/layouts/index.html
@@ -9,23 +9,23 @@
 <p>
 Thanks for checking out my website. My name is <b>Krishna Sangeeth</b>, I am a <b>Machine Learning engineer</b>  from Kerala, India. 
 
-I have been working as a freelance engineer/consultant for the past year or so. Below is my career highlights so far. 
+I have been working as a freelance engineer/consultant for the past year or so. Below is my <a href="https://linkedin.com/in/whiletruelearn"> career highlights </a> so far. 
 
-- Machine Learning Lead @ Avalara
-- Senior Data Scientist @ Ericsson
-- ML Engineer @ Indix
-- Software Engineer @ TCS 
-
-I hold a Master's degree in Datascience and Engineering from BITS Pilani and a Bachelors Degree in Computer Science Engineering from 
-College of Engineering Chengannur.
-
-  
-
-<a href="https://whiletruelearn.github.io/projects/"> Projects</a>
+<ul>
+    <li>Machine Learning Lead @ Avalara</li>
+    <li>Senior Data Scientist @ Ericsson</li>
+    <li>ML Engineer @ Indix</li>
+    <li>Software Engineer @ TCS</li>
+</ul>
 </p>
 <p>
-<a href="https://twitter.com/whiletruelearn"> Twitter</a> 
+I hold a Master's degree in Datascience and Engineering from BITS Pilani and a Bachelors Degree in Computer Science Engineering from 
+College of Engineering Chengannur.
 </p>
+
+I am a very curious person in general about the world and how stuff works. Some of this curiosity has made me decently good at building software. 
+I try and fail most days to embody the virtues <a href="https://en.wikipedia.org/wiki/Stoicism"> Stoicism. </a>
+I usually post my rants about life, universe and everything else in <a href="https://x.com/whiletruelearn"> Twitter </a> </p>. 
 
 
 Last Updated : Nov 2024
