--- a/themes/hugo-theme-console/layouts/index.html
+++ b/themes/hugo-theme-console/layouts/index.html
@@ -24,7 +24,7 @@ College of Engineering Chengannur.
 </p>
 
 I am a very curious person in general about the world and how stuff works. Some of this curiosity has made me decently good at building software. 
-I try and fail most days to embody the virtues <a href="https://en.wikipedia.org/wiki/Stoicism"> Stoicism. </a>
+I try and fail most days to embody the virtues of <a href="https://en.wikipedia.org/wiki/Stoicism"> Stoicism. </a>
 I usually post my rants about life, universe and everything else in <a href="https://x.com/whiletruelearn"> Twitter </a>. </p> 
 
 
